# axum_askama_tutorial

./: .env  .gitignore  Cargo.toml  README.md  justfile
migrations/: 20240903125718_create_users_table.sql
src/: init.rs  lib.rs  main.rs  routes.rs
src/handlers/: auth.rs  helpers.rs  mod.rs  public.rs  todos.rs
src/models/: mod.rs  templates.rs  user_form_model.rs
static/css/: auth.css  global.css  todo.css
static/js/: auth.js
templates/: index.html
templates/pages/: create.html  home.html  log-in.html  not-found.html  server-error.html  sign-up.html  todos.html
templates/partials/: navigation.html
